# uv-demo

./: README.md  pyproject.toml  requirements.in  requirements.txt
